<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.casper.karot_system.AdminPage"
    android:background="@drawable/logback">
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/edit"
       android:textColor="#fffefffd"
       android:id="@+id/edit_txt"
       android:layout_alignParentRight="true"
       android:textSize="24sp"
       android:textStyle="bold"
       android:layout_marginRight="20dp" />
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/admin_text"
        android:textSize="24dp"
        android:textColor="#fff5fff5"
        android:textStyle="bold"

        />
    <Button

        android:id="@+id/btn_addUni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_University"
        android:background="@drawable/ozelbutton2"
        android:textColor="#fff4ffff"


        android:layout_marginTop="350dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:background="@drawable/ozelbutton2"
        android:textColor="#fff4ffff"
        android:id="@+id/btn_addLake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_Lake"
        android:layout_below="@+id/btn_addUni"

        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:background="@drawable/ozelbutton2"
        android:textColor="#fff4ffff"
        android:id="@+id/btn_Homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Home_Page"
        android:layout_below="@+id/admin_text"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>



</RelativeLayout>
