<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.casper.karot_system.AddCore"
    android:background="@drawable/homepage">

    <TextView android:text="@string/Core_name"
        android:id="@+id/core_name"
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/core_name"
        android:id="@+id/core_name_text"
        android:background="#fffbfffb"
        android:textSize="24dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/coordinate"
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/core_name_text"
        android:text="@string/Core_coordinate"
        android:layout_marginTop="5dp"
        />
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinate"
        android:id="@+id/lati_text"
        android:background="#fffffbfb"
        android:textSize="24dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_width="160dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/longi_test"
        android:background="#fffefffd"
        android:layout_below="@+id/coordinate"
        android:layout_toRightOf="@+id/lati_text"
        android:layout_marginLeft="35dp"
        android:textSize="24dp"/>
    <TextView
        android:id="@+id/depth"
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lati_text"
        android:text="@string/Core_depth"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depth"
        android:id="@+id/depth_text"
        android:background="#fff8ffff"
        android:textSize="24dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/type"
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depth_text"
        android:text="@string/Core_type"
        android:layout_marginTop="5dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:background="#fffffdfd"
        android:layout_below="@+id/type"
        android:layout_marginTop="5dp"></Spinner>
    <TextView
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment"
        android:text="@string/Comments"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/type"
        android:layout_alignEnd="@+id/type" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/comment_text"
        android:background="#fffff7ff"
        android:layout_below="@+id/comment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calisanlar"
        android:text="@string/people"
        android:layout_below="@+id/comment_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/worker"
        android:background="#fff9fff9"
        android:textSize="30dp"
        android:layout_below="@+id/calisanlar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />
    <Button
        android:id="@+id/addcore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ozelbutton2"
        android:text="@string/Submit"
        android:textColor="#fff9f6ff"
        android:layout_below="@+id/worker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/date"
        android:textSize="24dp"
        android:textColor="#fffbfff8"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:layout_below="@+id/longi_test"
        android:layout_toRightOf="@+id/depth_text"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/date_text"
        android:layout_below="@id/date"
        android:layout_toRightOf="@+id/depth_text"
        android:layout_marginLeft="40dp"
        android:background="#fff6fffa"
        android:layout_marginTop="5dp"
        android:textSize="24dp"/>




</RelativeLayout>
